--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -26,6 +28,9 @@ dependencies:
   json_annotation: ^2.0.0
   shared_preferences: ^0.5.4+5
   dio: ^3.0.4
+  provider: ^3.1.0+1
+  pull_to_refresh: ^1.5.7
+  intl: ^0.15.8
 
 dev_dependencies:
   flutter_test:
@@ -35,6 +40,7 @@ dev_dependencies:
   json_model: ^0.0.2
   build_runner: ^1.6.0
   json_serializable: ^2.0.0
+  intl_translation: ^0.17.7
 
 
 # For information on the generic Dart part of this file, see the
@@ -53,8 +59,7 @@ flutter:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
   assets:
-    - assets/
-    - assets/images/
+    - imgs/lake.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
