--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -14,7 +14,7 @@ description: child growth and health star.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,11 +23,25 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  json_annotation: ^2.0.0
+  shared_preferences: ^0.5.4+5
+  dio: ^3.0.4
+  provider: ^3.1.0+1
+  pull_to_refresh: ^1.5.7
+  intl: ^0.15.8
+  cached_network_image: ^1.1.3
+  fluttertoast: ^3.1.3
+  flutter_swiper: ^1.1.6
+  fluro: ^1.5.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  json_model: ^0.0.2
+  json_serializable: ^2.0.0
+  build_runner: ^1.6.0
+  intl_translation: ^0.17.7
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
