--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -58,6 +58,31 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
+  assets:
+    - images/ic_home.png
+    - images/2.0x/ic_home.png
+    - images/3.0x/ic_home.png
+    - images/ic_home_active.png
+    - images/2.0x/ic_home_active.png
+    - images/3.0x/ic_home_active.png
+    - images/ic_knowledge.png
+    - images/2.0x/ic_knowledge.png
+    - images/3.0x/ic_knowledge.png
+    - images/ic_knowledge_active.png
+    - images/2.0x/ic_knowledge_active.png
+    - images/3.0x/ic_knowledge_active.png
+    - images/ic_exercise.png
+    - images/2.0x/ic_exercise.png
+    - images/3.0x/ic_exercise.png
+    - images/ic_exercise_active.png
+    - images/2.0x/ic_exercise_active.png
+    - images/3.0x/ic_exercise_active.png
+    - images/ic_consultation.png
+    - images/2.0x/ic_consultation.png
+    - images/3.0x/ic_consultation.png
+    - images/ic_consultation_active.png
+    - images/2.0x/ic_consultation_active.png
+    - images/3.0x/ic_consultation_active.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
