--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -83,6 +85,11 @@ flutter:
     - images/ic_consultation_active.png
     - images/2.0x/ic_consultation_active.png
     - images/3.0x/ic_consultation_active.png
+    - images/3.0x/ic_home_message.png
+    - images/3.0x/ic_home_personal.png
+    - images/3.0x/ic_home_search.png
+    - images/3.0x/icon_home_tag.png
+    - images/3.0x/icon_home_tagall.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
