--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   fluttertoast: ^3.1.3
   flutter_swiper: ^1.1.6
   fluro: ^1.5.1
+  flutter_staggered_grid_view: ^0.2.7
 
 dev_dependencies:
   flutter_test:
