--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_swiper: ^1.1.6
   fluro: ^1.5.1
   flutter_staggered_grid_view: ^0.3.0
+  webview_flutter: ^0.3.16
 
 dev_dependencies:
   flutter_test:
