--- a/child_star/android/app/src/main/AndroidManifest.xml
+++ b/child_star/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.stevie.child_star">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -11,8 +12,10 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
-        android:label="child_star">
+        android:label="child_star"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
