--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fluro: ^1.5.1
   flutter_staggered_grid_view: ^0.3.0
   webview_flutter: ^0.3.16
+  logger: ^0.7.0+2
 
 dev_dependencies:
   flutter_test:
