--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -36,8 +36,9 @@ dependencies:
   flutter_swiper: ^1.1.6
   fluro: ^1.5.1
   flutter_staggered_grid_view: ^0.3.0
-  webview_flutter: ^0.3.16
+  flutter_inappwebview: ^2.1.0+1
   logger: ^0.7.0+2
+  video_player: ^0.10.4+1
 
 dev_dependencies:
   flutter_test:
