--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_inappwebview: ^2.1.0+1
   logger: ^0.7.0+2
   video_player: ^0.10.4+1
+  audioplayers: ^0.13.5
 
 dev_dependencies:
   flutter_test:
