--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   logger: ^0.7.0+2
   video_player: ^0.10.4+1
   audioplayers: ^0.13.5
+  device_info: ^0.4.0
 
 dev_dependencies:
   flutter_test:
