--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -26,21 +26,21 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   json_annotation: ^2.0.0
-  shared_preferences: ^0.5.4+5
-  dio: ^3.0.4
+  shared_preferences: 0.5.4+9
+  video_player: 0.10.4+2
+  extended_image: ^0.6.8
+  dio: ^3.0.7
   provider: ^3.1.0+1
   pull_to_refresh: ^1.5.7
-  intl: ^0.15.8
-  cached_network_image: ^1.1.3
+  intl: ^0.16.0
   fluttertoast: ^3.1.3
   flutter_swiper: ^1.1.6
   fluro: ^1.5.1
   flutter_staggered_grid_view: ^0.3.0
   flutter_inappwebview: ^2.1.0+1
   logger: ^0.7.0+2
-  video_player: ^0.10.4+1
   audioplayers: ^0.13.5
-  device_info: ^0.4.0
+  device_info: ^0.4.1+4
 
 dev_dependencies:
   flutter_test:
