--- a/child_star/.gitignore
+++ b/child_star/.gitignore
@@ -18,7 +18,7 @@
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
-#.vscode/
+.vscode/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -33,6 +33,12 @@
 # Android related
 **/android/**/gradle-wrapper.jar
 **/android/.gradle
+**/android/.idea
+**/android/.settings
+**/android/.project
+**/android/app/.settings
+**/android/app/.project
+**/android/app/.classpath
 **/android/captures/
 **/android/gradlew
 **/android/gradlew.bat
