add avatar upload

--- a/child_star/ios/Runner/Info.plist
+++ b/child_star/ios/Runner/Info.plist
@@ -48,5 +48,7 @@
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<key>NSCameraUsageDescription</key>
 </dict>
 </plist>
