--- a/child_star/android/app/src/main/AndroidManifest.xml
+++ b/child_star/android/app/src/main/AndroidManifest.xml
@@ -49,5 +49,7 @@
     <uses-permission android:name="android.permission.ACCESS_ASSISTED_GPS" />
 
     <uses-permission android:name="android.permission.ACCESS_LOCATION" />
+    <!-- Permissions options for the `camera` group -->
+    <uses-permission android:name="android.permission.CAMERA"/>
 
 </manifest>
