--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   city_pickers: ^0.1.30
   permission_handler: '^4.0.0'
   image_picker: ^0.6.2+3
+  path_provider: ^1.5.1
 
 dev_dependencies:
   flutter_test:
