newdetail and coursedetail add download add mydownload and myBook page

--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   permission_handler: '^4.0.0'
   image_picker: ^0.6.2+3
   path_provider: ^1.5.1
+  sqflite: ^1.2.0
 
 dev_dependencies:
   flutter_test:
