--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   image_picker: ^0.6.2+3
   path_provider: ^1.5.1
   sqflite: ^1.2.0
+  flutter_full_pdf_viewer: ^1.0.6
+  auto_orientation: ^1.0.6
 
 dev_dependencies:
   flutter_test:
