--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -26,9 +26,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   json_annotation: ^2.0.0
-  shared_preferences: 0.5.4+9
-  video_player: 0.10.4+2
-  extended_image: ^0.6.8
+  shared_preferences: ^0.5.7+2
+  video_player: ^0.10.11
+  extended_image: ^0.8.0
   dio: ^3.0.7
   provider: ^3.1.0+1
   pull_to_refresh: ^1.5.7
