--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -29,8 +29,8 @@ dependencies:
   shared_preferences: ^0.5.7+2
   video_player: ^0.10.11
   extended_image: ^0.8.0
-  dio: ^3.0.7
-  provider: ^3.1.0+1
+  dio: ^3.0.9
+  provider: ^4.1.2
   pull_to_refresh: ^1.5.7
   intl: ^0.16.0
   fluttertoast: ^3.1.3
@@ -40,7 +40,7 @@ dependencies:
   flutter_inappwebview: ^2.1.0+1
   logger: ^0.7.0+2
   audioplayers: ^0.13.5
-  device_info: ^0.4.1+4
+  device_info: ^0.4.2+4
   city_pickers: ^0.1.30
   permission_handler: '^4.0.0'
   image_picker: ^0.6.2+3
