--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   sqflite: ^1.2.0
   flutter_full_pdf_viewer: ^1.0.6
   auto_orientation: ^1.0.6
+  package_info: ^0.4.1
+  xmly:
+    git:
+      url: https://github.com/JerrNeon/FlutterPlugins.git
+      path: xmly
 
 dev_dependencies:
   flutter_test:
