--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_full_pdf_viewer: ^1.0.6
   auto_orientation: ^1.0.6
   package_info: ^0.4.1
+  solid_bottom_sheet: ^0.1.9
   xmly:
     git:
       url: https://github.com/JerrNeon/FlutterPlugins.git
