--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -37,7 +37,8 @@ dependencies:
   flutter_swiper: ^1.1.6
   fluro: ^1.5.1
   flutter_staggered_grid_view: ^0.3.0
-  flutter_inappwebview: ^2.1.0+1
+  flutter_inappwebview: ^3.3.0+3
+  flutter_html: ^1.0.0
   logger: ^0.7.0+2
   audioplayers: ^0.13.5
   device_info: ^0.4.2+4
