--- a/child_star/android/app/src/main/AndroidManifest.xml
+++ b/child_star/android/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
                 android:name="io.flutter.app.android.SplashScreenUntilFirstFrame"
                 android:value="true" />
         </activity>
+        <meta-data
+            android:name="flutterEmbedding"
+            android:value="2" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
