--- a/child_star/pubspec.yaml
+++ b/child_star/pubspec.yaml
@@ -12,6 +12,7 @@ description: child growth and health star.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
+publish_to: none
 
 environment:
   sdk: ">=2.6.0 <3.0.0"
@@ -24,46 +25,49 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  json_annotation: ^2.0.0
-  shared_preferences: ^0.5.7+2
-  video_player: ^0.10.11
-  extended_image: ^0.8.0
-  dio: ^3.0.9
-  provider: ^4.1.2
-  pull_to_refresh: ^1.5.7
-  intl: ^0.16.0
-  fluttertoast: ^3.1.3
+  cupertino_icons: ^1.0.3
+  # json_annotation: ^4.0.1
+  shared_preferences: ^2.0.6
+  video_player: ^2.1.6
+  extended_image: ^4.1.0
+  dio: ^4.0.0
+  provider: ^5.0.0
+  pull_to_refresh: ^2.0.0
+  intl: ^0.17.0
+  fluttertoast: ^8.0.7
   flutter_swiper: ^1.1.6
-  fluro: ^1.5.1
-  flutter_staggered_grid_view: ^0.3.0
-  flutter_inappwebview: ^3.3.0+3
-  flutter_html: ^1.0.0
-  logger: ^0.7.0+2
-  audioplayers: ^0.13.5
-  device_info: ^0.4.2+4
-  city_pickers: ^0.1.30
-  permission_handler: '^4.0.0'
-  image_picker: ^0.6.2+3
-  path_provider: ^1.5.1
-  sqflite: ^1.2.0
+  fluro: ^2.0.3
+  flutter_staggered_grid_view: ^0.4.0
+  flutter_inappwebview: ^5.3.2
+  flutter_html: ^2.1.0
+  logger: ^1.0.0
+  audioplayers: ^0.19.0
+  device_info: ^2.0.2
+  city_pickers: ^1.0.1
+  permission_handler: '^8.1.1'
+  image_picker: ^0.8.1+1
+  path_provider: ^2.0.2
+  sqflite: ^2.0.0+3
   flutter_full_pdf_viewer: ^1.0.6
-  auto_orientation: ^1.0.6
-  package_info: ^0.4.1
-  solid_bottom_sheet: ^0.1.9
+  auto_orientation: ^2.0.2
+  package_info: ^2.0.2
+  solid_bottom_sheet: ^0.1.10
   xmly:
     git:
-      url: https://github.com/JerrNeon/FlutterPlugins.git
+      url: https://gitee.com/jerrneon/FlutterPlugins.git
       path: xmly
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  json_model: ^0.0.2
-  json_serializable: ^2.0.0
-  build_runner: ^1.6.0
-  intl_translation: ^0.17.7
+  # json_model: ^0.0.2
+  json_serializable: ^4.1.3
+  build_runner: ^2.0.5
+  # intl_translation: ^0.17.10+1
+
+dependency_overrides:
+  json_annotation: ^4.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
